[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta485generator"
version = "0.1.0"
dependencies = [
    "bs4",
    "click",
    "html5validator",
    "jinja2",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests"
]
requires-python = ">=3.8"

[project.scripts]
insta485generator = "insta485generator.__main__:main"

[tool.setuptools]
packages = ["insta485generator"]
